--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "googleapis": "^110.0.0",
+    "micro": "^10.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^11.9.1",
     "typescript": "4.9.5"
   }
 }
